Move docker compose to 8081 for host port.
