# docs/swagger.json
@@ -16,32 +16,6 @@
         "version": "1.0"
     },
     "paths": {
-        "/": {
-            "get": {
-                "description": "get welcome message",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "articles"
-                ],
-                "summary": "See the hwllo world message",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
         "/api/v1/articles": {
             "get": {
                 "description": "Returns all articles",
@@ -89,7 +63,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.Article"
+                            "$ref": "#/definitions/dto.ArticleData"
                         }
                     }
                 ],
@@ -97,7 +71,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Article"
+                            "$ref": "#/definitions/dto.ArticleData"
                         }
                     },
                     "500": {
@@ -193,6 +167,20 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.ArticleData": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
