# dto/article.go
@@ -11,3 +11,9 @@ type Article struct {
 func NewArticle(id uint, title, description, content string, metadata []Hypermedia) *Article {
 	return &Article{metadata, id, title, description, content}
 }
+
+type ArticleData struct {
+	Title       string `json:"title,omitempty"`
+	Description string `json:"description,omitempty"`
+	Content     string `json:"content,omitempty"`
+}
